--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.51.0",
     "swiper": "^8.1.4",
+    "use-axios-client": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
